--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cradborad-prd": "file:",
+    "framer-motion": "^11.11.11",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-color-palette": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
+    "react-spring": "^9.7.4",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
