--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-  "builds": [
-    {
-      "src": "dist/**/*",
-      "use": "@vercel/static"
+    "build": {
+    "env": {
+      "NODE_ENV": "production"
     }
-  ],
+  },
     "rewrites": [
       {
         "source": "/(.*)",
