--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "builds": [
-    { "src": "index.html", "use": "@vercel/static" },
-    { "src": "dist/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+    "build": {
+    "env": {
+      "NODE_ENV": "production"
+    }
+  },
+    "rewrites": [
+      {
+        "source": "/(.*)",
+        "destination": "/"
+      }
+    ]
   }
