--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,32 @@
+// {
+//     "build": {
+//     "env": {
+//       "NODE_ENV": "production"
+//     }
+//   },
+//     "rewrites": [
+//       {
+//         "source": "/(.*)",
+//         "destination": "/"
+//       }
+//     ]
+//   }
+
 {
-    "build": {
-    "env": {
-      "NODE_ENV": "production"
+  "builds": [
+    {
+      "src": "public/*",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "index.html",
+      "use": "@vercel/static"
     }
-  },
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/"
-      }
-    ]
-  }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
+}
