--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# VITE_BACKEND_BASE_URL = https://cardboard-prd-api-repo.onrender.com
+VITE_BACKEND_BASE_URL = https://cardboard-prd-api-repo.onrender.com
 VITE_BACKEND_SHARE_IN_APP_BASE_URL = https://inappserver.onrender.com
-VITE_BACKEND_BASE_URL = http://localhost:8080
+# VITE_BACKEND_BASE_URL = http://localhost:8080
 VITE_GOOGLE_OAUTH_REDIRECT_URL = oauth2/authorization/google
 VITE_AUTH_URL_SERVER = api/v1
